--- a/nosotros/derecho/index.html
+++ b/nosotros/derecho/index.html
@@ -139,8 +139,8 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <div class="section-title-container d-flex align-items-center justify-content-between">
-          <h2>Team</h2>
-          <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+          <h2>Participantes</h2>
+          <p>Miembros del CECH-Sección Derecho</p>
         </div>
       </div><!-- End Section Title -->
 
@@ -152,9 +152,9 @@
             <div class="team-member d-flex align-items-start">
               <div class="pic"><img src="../../assets/img/team/team-1.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
-                <p>Explicabo voluptatem mollitia et repellat qui dolorum quasi</p>
+                <h4>Katheryn Acero</h4>
+                <span>Coordinadora</span>
+                <p>Info mmass</p>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
