--- a/publicaciones/index.html
+++ b/publicaciones/index.html
@@ -57,7 +57,14 @@
               <li><a href="../nosotros/literatura/">Sección Literatura</a></li>
             </ul>
           </li>
-          <li><a href="../publicaciones/">Publicaciones</a></li>
+          <li class="dropdown"><a href="../publicaciones/"><span>Publicaciones</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="articulos/">Artículos académicos</a></li>
+              <li><a href="ensayos/">Ensayos</a></li>
+              <li><a href="reseñas/">Reseñas</a></li>
+              <li><a href="boletines/">Boletines</a></li>
+            </ul>
+          </li>
           <li><a href="../noticias/">#Noticias</a></li>
           <li><a href="../eventos/">Eventos</a></li>
           <li><a href="../contacto/">Contacto</a></li>
