--- a/eventos/nueva-convocatoria-cech-economia-2025-1/index.html
+++ b/eventos/nueva-convocatoria-cech-economia-2025-1/index.html
@@ -116,26 +116,40 @@
 
                 <div class="content">
                   <p>
-                    Texto1
+                    El Círculo de Estudios Chinos – Sección Economía es un grupo de investigación compuesto por alumnos y egresados 
+                    de la Facultad de Ciencias Sociales de la PUCP, especializados en Economía y Finanzas. Su objeto de interés 
+                    se centra en desentrañar las complejidades de la economía china y su impacto global, con un 
+                    enfoque particular en las relaciones económicas con Perú. Como parte de una iniciativa del 
+                    Instituto Confucio y el alumnado, el CECH – Sección Economía impulsa la investigación 
+                    académica con el objetivo de generar un conocimiento profundo y relevante sobre una de las 
+                    economías más influyentes del mundo.
                   </p>
 
                   <p>
-                    Texto2.
+                    Requisitos para postular:
                   </p>
+                  <ul>
+                    <li><i class="bi bi-check-circle"></i> <span>Ser estudiante o egresado de las facultades de Ciencias 
+                      Sociales o Estudios Generales Letras de la PUCP con especialidad en Economía o Finanzas.</span></li>
+                    <li><i class="bi bi-check-circle"></i> <span>Conocimiento de inglés básico (obligatorio).</span></li>
+                    <li><i class="bi bi-check-circle"></i> <span>Tener en cuenta que la entrevista será de manera virtual.</span></li>
+                  </ul>
 
                   <blockquote>
                     <p>
-                      Texto 3.
+                      https://docs.google.com/forms/d/e/1FAIpQLSc5-JdreH_mdyH9oWojAJIwFD92vpHXcUeKj0P-U3l0XJL79g/viewform?usp=dialog
                     </p>
                   </blockquote>
 
                   <p>
-                    Texto 4.
+                    Envía un correo con el asunto “Convocatoria CECH-ECONOMIA 2025-1” al correo cech-economia@pucp.edu.pe y adjunta 
+                    los siguientes documentos: Curriculum Vitae (CV) y Carta de motivación. Explica brevemente por qué desea formar parte 
+                    del CECH-Economía
                   </p>
 
-                  <h3>Texto 5.</h3>
+                  <h3>O completa el formulario con tus datos y envía tu postulación.</h3>
                   <p>
-                    Texto 6.
+                    Cierre de convocatoria: 28 de marzo del 2025
                   </p>
                   <img src="img/CECH-CONVOCATORIA-2025-1.jpg" class="img-fluid" alt="">
 
