--- a/nosotros/index.html
+++ b/nosotros/index.html
@@ -57,7 +57,13 @@
               <li><a href="literatura/">Sección Literatura</a></li>
             </ul>
           </li>
-          <li><a href="../publicaciones/">Publicaciones</a></li>
+          <li class="dropdown"><a href="../publicaciones/"><span>Publicaciones</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="../publicaciones/articulos/">Artículos académicos</a></li>
+              <li><a href="../publicaciones/ensayos/">Ensayos</a></li>
+              <li><a href="../publicaciones/reseñas/">Reseñas</a></li>
+              <li><a href="../publicaciones/boletines/">Boletines</a></li>
+            </ul>
           <li><a href="../noticias/">#Noticias</a></li>
           <li><a href="../eventos/">Eventos</a></li>
           <li><a href="../contacto/">Contacto</a></li>
