--- a/publicaciones/index.html
+++ b/publicaciones/index.html
@@ -122,6 +122,8 @@
                       <p>
                         Trabajos formales de investigación, con estructura académica 
                         (introducción, desarrollo, citas, conclusiones). 
+                      </p>
+                      <p>
                         Propósito: mostrar la capacidad investigadora del círculo y dejar registro 
                         de análisis más profundos o proyectos grupales.
                       </p>
@@ -149,6 +151,8 @@
                       <p>
                         Reflexiones críticas, ideas personales bien argumentadas, pero con un tono más libre 
                         y subjetivo que un artículo.
+                      </p>
+                      <p>
                         Propósito: fomentar la opinión fundamentada, permitir diversidad de voces, abrir debates.
                       </p>
 
@@ -175,6 +179,8 @@
                       <p>
                         Contenido: comentarios sobre libros, artículos, papers o incluso eventos 
                         relacionados a China.
+                      </p>
+                      <p>
                         Propósito: difundir bibliografía interesante, incentivar lectura 
                         crítica, generar comunidad lectora.
                       </p>
@@ -202,7 +208,10 @@
                       <p>
                         Contenido: publicaciones periódicas del círculo, tipo resumen de actividades, 
                         informes breves, avances, recopilación de ideas.
-                        Propósito: dar visibilidad institucional al trabajo del círculo, mantener al día a lectores, quizás incluso como formato de newsletter.
+                      </p>
+                      <p>
+                        Propósito: dar visibilidad institucional al trabajo del círculo, mantener al 
+                        día a lectores, quizás incluso como formato de newsletter.
                       </p>
 
                       <hr>
@@ -218,26 +227,6 @@
             </div>
 
           </section><!-- /Blog Posts Section -->
-
-          <!-- Blog Pagination Section -->
-          <section id="blog-pagination" class="blog-pagination section">
-
-            <div class="container">
-              <div class="d-flex justify-content-center">
-                <ul>
-                  <li><a href="#"><i class="bi bi-chevron-left"></i></a></li>
-                  <li><a href="#">1</a></li>
-                  <li><a href="#" class="active">2</a></li>
-                  <li><a href="#">3</a></li>
-                  <li><a href="#">4</a></li>
-                  <li>...</li>
-                  <li><a href="#">10</a></li>
-                  <li><a href="#"><i class="bi bi-chevron-right"></i></a></li>
-                </ul>
-              </div>
-            </div>
-
-          </section><!-- /Blog Pagination Section -->
 
         </div>
 
