--- a/publicaciones/articulos/index.html
+++ b/publicaciones/articulos/index.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="../assets/img/favicon.png" rel="icon">
-  <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="../../assets/img/favicon.png" rel="icon">
+  <link href="../../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -18,13 +18,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="../../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../../assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="../../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="../assets/css/main.css" rel="stylesheet">
+  <link href="../../assets/css/main.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: ZenBlog
@@ -40,7 +40,7 @@
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container position-relative d-flex align-items-center justify-content-between">
 
-      <a href="../" class="logo d-flex align-items-center me-auto me-xl-0">
+      <a href="../../" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <h1 class="sitename">Círculo de Estudios Chinos</h1>
@@ -51,23 +51,23 @@
           <!--<li><a href="index.html">Home</a></li>-->
            <li class="dropdown"><a href="../nosotros/"><span>Nosotros</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="../nosotros/">CECH</a></li>
-              <li><a href="../nosotros/derecho/">Sección Derecho</a></li>
-              <li><a href="../nosotros/economia/">Sección Economía</a></li>
-              <li><a href="../nosotros/literatura/">Sección Literatura</a></li>
+              <li><a href="../../nosotros/">CECH</a></li>
+              <li><a href="../../nosotros/derecho/">Sección Derecho</a></li>
+              <li><a href="../../nosotros/economia/">Sección Economía</a></li>
+              <li><a href="../../nosotros/literatura/">Sección Literatura</a></li>
             </ul>
           </li>
-          <li class="dropdown"><a href="../publicaciones/"><span>Publicaciones</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="../../publicaciones/"><span>Publicaciones</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="articulos/">Artículos académicos</a></li>
-              <li><a href="ensayos/">Ensayos</a></li>
-              <li><a href="reseñas/">Reseñas</a></li>
-              <li><a href="boletines/">Boletines</a></li>
+              <li><a href="../articulos/">Artículos académicos</a></li>
+              <li><a href="../ensayos/">Ensayos</a></li>
+              <li><a href="../reseñas/">Reseñas</a></li>
+              <li><a href="../boletines/">Boletines</a></li>
             </ul>
           </li>
-          <li><a href="../noticias/">#Noticias</a></li>
-          <li><a href="../eventos/">Eventos</a></li>
-          <li><a href="../contacto/">Contacto</a></li>
+          <li><a href="../../noticias/">#Noticias</a></li>
+          <li><a href="../../eventos/">Eventos</a></li>
+          <li><a href="../../contacto/">Contacto</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -90,7 +90,7 @@
         <h1 class="mb-2 mb-lg-0">Publicaciones</h1>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="../">Inicio</a></li>
+            <li><a href="../../">Inicio</a></li>
             <li class="current">Publicaciones</li>
           </ol>
         </nav>
@@ -112,7 +112,7 @@
                   <article class="position-relative h-100">
 
                     <div class="post-img position-relative overflow-hidden">
-                      <img src="../assets/img/blog/blog-1.jpg" class="img-fluid" alt="">
+                      <img src="../../assets/img/blog/blog-1.jpg" class="img-fluid" alt="">
                     </div>
 
                     <div class="post-content d-flex flex-column">
@@ -130,7 +130,7 @@
 
                       <hr>
 
-                      <a href="../blog-details.html" class="readmore stretched-link"><span>Más información</span><i class="bi bi-arrow-right"></i></a>
+                      <a href="../../blog-details.html" class="readmore stretched-link"><span>Más información</span><i class="bi bi-arrow-right"></i></a>
 
                     </div>
 
@@ -141,7 +141,7 @@
                   <article class="position-relative h-100">
 
                     <div class="post-img position-relative overflow-hidden">
-                      <img src="../assets/img/blog/blog-2.jpg" class="img-fluid" alt="">
+                      <img src="../../assets/img/blog/blog-2.jpg" class="img-fluid" alt="">
                     </div>
 
                     <div class="post-content d-flex flex-column">
@@ -158,7 +158,7 @@
 
                       <hr>
 
-                      <a href="../blog-details.html" class="readmore stretched-link"><span>Más información</span><i class="bi bi-arrow-right"></i></a>
+                      <a href="../../blog-details.html" class="readmore stretched-link"><span>Más información</span><i class="bi bi-arrow-right"></i></a>
 
                     </div>
 
@@ -169,7 +169,7 @@
                   <article class="position-relative h-100">
 
                     <div class="post-img position-relative overflow-hidden">
-                      <img src="../assets/img/blog/blog-3.jpg" class="img-fluid" alt="">
+                      <img src="../../assets/img/blog/blog-3.jpg" class="img-fluid" alt="">
                     </div>
 
                     <div class="post-content d-flex flex-column">
@@ -187,7 +187,7 @@
 
                       <hr>
 
-                      <a href="../blog-details.html" class="readmore stretched-link"><span>Más información</span><i class="bi bi-arrow-right"></i></a>
+                      <a href="../../blog-details.html" class="readmore stretched-link"><span>Más información</span><i class="bi bi-arrow-right"></i></a>
 
                     </div>
 
@@ -198,7 +198,7 @@
                   <article class="position-relative h-100">
 
                     <div class="post-img position-relative overflow-hidden">
-                      <img src="../assets/img/blog/blog-4.jpg" class="img-fluid" alt="">
+                      <img src="../../assets/img/blog/blog-4.jpg" class="img-fluid" alt="">
                     </div>
 
                     <div class="post-content d-flex flex-column">
@@ -216,7 +216,7 @@
 
                       <hr>
 
-                      <a href="../blog-details.html" class="readmore stretched-link"><span>Más información</span><i class="bi bi-arrow-right"></i></a>
+                      <a href="../../blog-details.html" class="readmore stretched-link"><span>Más información</span><i class="bi bi-arrow-right"></i></a>
 
                     </div>
 
@@ -227,6 +227,22 @@
             </div>
 
           </section><!-- /Blog Posts Section -->
+
+          <!-- Blog Pagination Section -->
+          <section id="blog-pagination" class="blog-pagination section">
+
+            <div class="container">
+              <div class="d-flex justify-content-center">
+                <ul>
+                  <li><a href="#"><i class="bi bi-chevron-left"></i></a></li>
+                  <li><a href="#" class="active">1</a></li>
+                  <!--<li><a href="#">2</a></li>-->
+                  <li><a href="#"><i class="bi bi-chevron-right"></i></a></li>
+                </ul>
+              </div>
+            </div>
+
+          </section><!-- /Blog Pagination Section -->
 
         </div>
 
@@ -240,7 +256,7 @@
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
-          <a href="../" class="logo d-flex align-items-center">
+          <a href="../../" class="logo d-flex align-items-center">
             <span class="sitename">Círculo de Estudios Chinos</span>
           </a>
           <div class="footer-contact pt-3">
@@ -263,11 +279,11 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Enlaces</h4>
           <ul>
-            <li><a href="../">Inicio</a></li>
-            <li><a href="../nosotros/">Nosotros</a></li>
-            <li><a href="../publicaciones/">Publicaciones</a></li>
-            <li><a href="../noticias/">#Noticias</a></li>
-            <li><a href="../eventos/">Eventos</a></li>
+            <li><a href="../../">Inicio</a></li>
+            <li><a href="../../nosotros/">Nosotros</a></li>
+            <li><a href="../../publicaciones/">Publicaciones</a></li>
+            <li><a href="../../noticias/">#Noticias</a></li>
+            <li><a href="../../eventos/">Eventos</a></li>
           </ul>
         </div>
 
@@ -305,13 +321,13 @@
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-  <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="../assets/vendor/php-email-form/validate.js"></script>
-  <script src="../assets/vendor/aos/aos.js"></script>
-  <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="../../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../../assets/vendor/php-email-form/validate.js"></script>
+  <script src="../../assets/vendor/aos/aos.js"></script>
+  <script src="../../assets/vendor/swiper/swiper-bundle.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="../assets/js/main.js"></script>
+  <script src="../../assets/js/main.js"></script>
 
 </body>
 
