--- a/publicaciones/articulos/index.html
+++ b/publicaciones/articulos/index.html
@@ -87,7 +87,7 @@
     <!-- Page Title -->
     <div class="page-title position-relative">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">Publicaciones</h1>
+        <h1 class="mb-2 mb-lg-0">Artículos académicos</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="../../">Inicio</a></li>
