--- a/publicaciones/index.html
+++ b/publicaciones/index.html
@@ -130,7 +130,7 @@
 
                       <hr>
 
-                      <a href="../blog-details.html" class="readmore stretched-link"><span>Más información</span><i class="bi bi-arrow-right"></i></a>
+                      <a href="articulos/" class="readmore stretched-link"><span>Más información</span><i class="bi bi-arrow-right"></i></a>
 
                     </div>
 
@@ -158,7 +158,7 @@
 
                       <hr>
 
-                      <a href="../blog-details.html" class="readmore stretched-link"><span>Más información</span><i class="bi bi-arrow-right"></i></a>
+                      <a href="ensayos/" class="readmore stretched-link"><span>Más información</span><i class="bi bi-arrow-right"></i></a>
 
                     </div>
 
@@ -187,7 +187,7 @@
 
                       <hr>
 
-                      <a href="../blog-details.html" class="readmore stretched-link"><span>Más información</span><i class="bi bi-arrow-right"></i></a>
+                      <a href="reseñas/" class="readmore stretched-link"><span>Más información</span><i class="bi bi-arrow-right"></i></a>
 
                     </div>
 
@@ -216,7 +216,7 @@
 
                       <hr>
 
-                      <a href="../blog-details.html" class="readmore stretched-link"><span>Más información</span><i class="bi bi-arrow-right"></i></a>
+                      <a href="boletines/" class="readmore stretched-link"><span>Más información</span><i class="bi bi-arrow-right"></i></a>
 
                     </div>
 
