--- a/publicaciones/articulos/index.html
+++ b/publicaciones/articulos/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Publicaciones - CECH-PUCP</title>
+  <title>Artículos Acad. - CECH-PUCP</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -49,7 +49,7 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <!--<li><a href="index.html">Home</a></li>-->
-           <li class="dropdown"><a href="../nosotros/"><span>Nosotros</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+           <li class="dropdown"><a href="../../nosotros/"><span>Nosotros</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="../../nosotros/">CECH</a></li>
               <li><a href="../../nosotros/derecho/">Sección Derecho</a></li>
@@ -100,7 +100,7 @@
     <div class="container">
       <div class="row">
 
-        <div class="col-lg-12">
+        <div class="col-lg-15">
 
           <!-- Blog Posts Section -->
           <section id="blog-posts" class="blog-posts section">
