--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 <div class="col-lg-4">
 
                   <div class="trending">
-                    <h3>Trending</h3>
+                    <h3>#Noticias</h3>
                     <ul class="trending-post">
                       <li>
                         <a href="blog-details.html">
