--- a/nosotros/derecho/index.html
+++ b/nosotros/derecho/index.html
@@ -123,10 +123,10 @@
               <div class="col-lg-6">
                 <div class="row gy-4">
                   <div class="col-lg-12">
-                    <img src="../../assets/img/about-company-2.jpg" class="img-fluid" alt="">
+                    <img src="img/derecho-2.jpg" class="img-fluid" alt="">
                   </div>
                   <div class="col-lg-12">
-                    <img src="../../assets/img/about-company-3.jpg" class="img-fluid" alt="">
+                    <img src="img/derecho-3.jpg" class="img-fluid" alt="">
                   </div>
                 </div>
               </div>
@@ -156,7 +156,7 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="../../assets/img/team/team-1.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="img/team-derecho-1.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Katheryn Acero</h4>
                 <span>Coordinadora</span>
@@ -173,7 +173,7 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="../../assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="img/team-derecho-3.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Sarah Jhonson</h4>
                 <span>Product Manager</span>
@@ -190,7 +190,7 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
             <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="../../assets/img/team/team-3.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="img/team-derecho-2.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>William Anderson</h4>
                 <span>CTO</span>
@@ -207,7 +207,7 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
             <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="../../assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="img/team-derecho-5.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Amanda Jepson</h4>
                 <span>Accountant</span>
