--- a/nosotros/economia/index.html
+++ b/nosotros/economia/index.html
@@ -133,10 +133,10 @@
               <div class="col-lg-6">
                 <div class="row gy-4">
                   <div class="col-lg-12">
-                    <img src="../../assets/img/about-company-2.jpg" class="img-fluid" alt="">
+                    <img src="img/economia-2.jpg" class="img-fluid" alt="">
                   </div>
                   <div class="col-lg-12">
-                    <img src="../../assets/img/about-company-3.jpg" class="img-fluid" alt="">
+                    <img src="img/economia-3.jpg" class="img-fluid" alt="">
                   </div>
                 </div>
               </div>
@@ -166,7 +166,7 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="img/Coordinador.jpeg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="img/team-economia-1.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Fernando Mendoza</h4>
                 <span>Coordinador</span>
@@ -183,7 +183,7 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="../../assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="img/team-economia-3.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Sarah Jhonson</h4>
                 <span>Product Manager</span>
@@ -200,7 +200,7 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
             <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="../../assets/img/team/team-3.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="img/team-economia-5.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>William Anderson</h4>
                 <span>CTO</span>
@@ -217,7 +217,7 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
             <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="../../assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="img/team-economia-4.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Amanda Jepson</h4>
                 <span>Accountant</span>
