--- a/index.html
+++ b/index.html
@@ -120,17 +120,17 @@
               </div>
             </div>
 
-            <div class="swiper-slide" style="background-image: url('assets/img/post-slide-2.jpg');">
+            <div class="swiper-slide" style="background-image: url('publicaciones/boletines/img/boletin-1.png');">
               <div class="content">
-                <h2><a href="single-post.html">17 Pictures of Medium Length Hair in Layers That Will Inspire Your New Haircut</a></h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem neque est mollitia! Beatae minima assumenda repellat harum vero, officiis ipsam magnam obcaecati cumque maxime inventore repudiandae quidem necessitatibus rem atque.</p>
+                <h2><a href="publicaciones/boletines/">Boletin del Cech N°1 (2021) esta disponible</a></h2>
+                <p> Nuevo Boletin fue publicado. Vealo</p>
               </div>
             </div>
 
-            <div class="swiper-slide" style="background-image: url('assets/img/post-slide-3.jpg');">
+            <div class="swiper-slide" style="background-image: url('publicaciones/ensayos/img/ensayo-1.png');">
               <div class="content">
-                <h2><a href="single-post.html">13 Amazing Poems from Shel Silverstein with Valuable Life Lessons</a></h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem neque est mollitia! Beatae minima assumenda repellat harum vero, officiis ipsam magnam obcaecati cumque maxime inventore repudiandae quidem necessitatibus rem atque.</p>
+                <h2><a href="single-post.html">Prelude to Revolution by Sebastián Portella</a></h2>
+                <p>Nueva redacción por uno de los mimbros de la Sección de Economía</p>
               </div>
             </div>
 
