--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
               </div>
             </div>
 
-            <div class="swiper-slide" style="background-image: url('assets/img/post-slide-4.jpg');">
+            <div class="swiper-slide" style="background-image: url('eventos/nueva-convocatoria-cech-economia-2025-1/img/BANNER-CONVOCATORIA-2025-1.jpg');">
               <div class="content">
-                <h2><a href="single-post.html">9 Half-up/half-down Hairstyles for Long and Medium Hair</a></h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem neque est mollitia! Beatae minima assumenda repellat harum vero, officiis ipsam magnam obcaecati cumque maxime inventore repudiandae quidem necessitatibus rem atque.</p>
+                <h2><a href="eventos/nueva-convocatoria-cech-economia-2025-1/">Ultima convocatoria del CECH-Economía</a></h2>
+                <p>Deseas unirte al Circulo de Estudios Chinos Sección Economía, postula ya!</p>
               </div>
             </div>
           </div>
