--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
             <div class="swiper-slide" style="background-image: url('publicaciones/ensayos/img/ensayo-1.png');">
               <div class="content">
-                <h2><a href="single-post.html">Prelude to Revolution by Sebastián Portella</a></h2>
+                <h2><a href="publicaciones/ensayos/Prelude to Revolution/">Prelude to Revolution by Sebastián Portella</a></h2>
                 <p>Nueva redacción por uno de los mimbros de la Sección de Economía</p>
               </div>
             </div>
