--- a/nosotros/derecho/index.html
+++ b/nosotros/derecho/index.html
@@ -118,7 +118,7 @@
           <div class="col-lg-6 about-images" data-aos="fade-up" data-aos-delay="200">
             <div class="row gy-4">
               <div class="col-lg-6">
-                <img src="img/circulo-derecho.png" class="img-fluid" alt="">
+                <img src="img/circulo-derecho2.png" class="img-fluid" alt="">
               </div>
               <div class="col-lg-6">
                 <div class="row gy-4">
