--- a/publicaciones/articulos/Impacto-de-X-sobre-y/index.html
+++ b/publicaciones/articulos/Impacto-de-X-sobre-y/index.html
@@ -52,12 +52,18 @@
            <li class="dropdown"><a href="../../../nosotros/"><span>Nosotros</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="../../../nosotros/">CECH</a></li>
-              <li><a href="../../../nosotros/derecho/">Sección Derecho</a></li>
-              <li><a href="../../../nosotros/economia/">Sección Economía</a></li>
-              <li><a href="../../../nosotros/literatura/">Sección Literatura</a></li>
+              <li><a href="../../../derecho/">Sección Derecho</a></li>
+              <li><a href="../../../economia/">Sección Economía</a></li>
+              <li><a href="../../../literatura/">Sección Literatura</a></li>
             </ul>
           </li>
-          <li><a href="../../../publicaciones/">Publicaciones</a></li>
+          <li class="dropdown"><a href="../../../publicaciones/"><span>Publicaciones</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="../../../publicaciones/articulos/">Artículos académicos</a></li>
+              <li><a href="../../../publicaciones/ensayos/">Ensayos</a></li>
+              <li><a href="../../../publicaciones/reseñas/">Reseñas</a></li>
+              <li><a href="../../../publicaciones/boletines/">Boletines</a></li>
+            </ul>
           <li><a href="../../../noticias/">#Noticias</a></li>
           <li><a href="../../../eventos/">Eventos</a></li>
           <li><a href="../../../contacto/">Contacto</a></li>
