--- a/publicaciones/ensayos/Prelude-to-Revolution/index.html
+++ b/publicaciones/ensayos/Prelude-to-Revolution/index.html
@@ -86,7 +86,7 @@
     <!-- Page Title -->
     <div class="page-title">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">Ensayos</h1>
+        <h1 class="mb-2 mb-lg-0">Preludio a la Revolución</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="../../../">Inicio</a></li>
