--- a/eventos/index.html
+++ b/eventos/index.html
@@ -367,7 +367,7 @@
             </div>
             
             <!-- Al final del body (antes de cerrar </body>) -->
-            <script src="../../../assets/js/lo-ultimo.js"></script>
+            <script src="../assets/js/lo-ultimo.js"></script>
             <script>
               renderRecentPosts("recent-posts-widget");
             </script>
