--- a/publicaciones/ensayos/ensayo-2/index.html
+++ b/publicaciones/ensayos/ensayo-2/index.html
@@ -90,7 +90,7 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="../../../">Inicio</a></li>
-            <li class="current">Artículos académicos</li>
+            <li class="current">Ensayos</li>
           </ol>
         </nav>
       </div>
