--- a/eventos/nueva-convocatoria-cech-economia-2025-1/index.html
+++ b/eventos/nueva-convocatoria-cech-economia-2025-1/index.html
@@ -212,7 +212,7 @@
             </div>
             
             <!-- Al final del body (antes de cerrar </body>) -->
-            <script src="../../../assets/js/lo-ultimo.js"></script>
+            <script src="../../assets/js/lo-ultimo.js"></script>
             <script>
               renderRecentPosts("recent-posts-widget");
             </script>
