--- a/publicaciones/reseñas/index.html
+++ b/publicaciones/reseñas/index.html
@@ -199,7 +199,7 @@
                 <ul>
                   <li><a href="#"><i class="bi bi-chevron-left"></i></a></li>
                   <li><a href="#" class="active">1</a></li>
-                  <!--<li><a href="#">2</a></li>-->
+                  <li><a href="#">2</a></li>
                   <li><a href="#"><i class="bi bi-chevron-right"></i></a></li>
                 </ul>
               </div>
