--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
+      <!-- Logo entre contacto y redes sociales -->
+       <div class="logo-mini d-none d-lg-block">
+        <img src="assets/img/confucio-logo.png" alt="Logo InstConfucio" style="height: 40px; margin-left: 15px;">
+      </div>
+
       <div class="header-social-links">
         <!--<a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a></a>-->
         <a href="https://www.facebook.com/cechpucp" class="facebook"><i class="bi bi-facebook"></i>
