--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
 
       <!-- Logo entre contacto y redes sociales -->
        <div class="logo-mini d-none d-lg-block">
-        <img src="assets/img/confucio-logo.png" alt="Logo InstConfucio" style="height: 40px; margin-left: 15px;">
+        <a href="https://confucio.pucp.edu.pe/" target="_blank" rel="noopener">
+          <img src="assets/img/confucio-logo.png" alt="Logo InstConfucio" style="height: 40px; margin-left: 15px;">
+        </a>
       </div>
 
       <div class="header-social-links">
