--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
 
 <body class="index-page">
 
+  <!-- Inicio Header -->
   <div id="header-container"></div>
   <script src="assets/js/header.js"></script>
-
+  <!-- Fin Header -->
+   
   <main class="main">
 
     <!-- Slider Section -->
@@ -410,68 +412,9 @@
 
   </main>
 
-  <footer id="footer" class="footer dark-background">
-
-    <div class="container footer-top">
-      <div class="row gy-4">
-        <div class="col-lg-4 col-md-6 footer-about">
-          <a href="./" class="logo d-flex align-items-center">
-            <span class="sitename">Círculo de Estudios Chinos</span>
-          </a>
-          <div class="footer-contact pt-3">
-            <p>Av. Universitaria Nº 890, San Miguel</p>
-            <p>Lima, Perú</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+51 5589 55488 55</span></p>
-            <p><strong>Email:</strong><br>
-            <span>cech-derecho@pucp.edu.pe</span><br>
-            <span>cech-economia@pucp.edu.pe</span>
-          </p>
-          </div>
-          <div class="social-links d-flex mt-4">
-            <!--<a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a></a>-->
-            <a href="https://www.facebook.com/cechpucp" class="facebook"><i class="bi bi-facebook"></i>
-            <a href="https://www.instagram.com/cechpucp/" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="https://www.linkedin.com/company/c%C3%ADrculo-de-estudios-chinos-secci%C3%B3n-derecho/posts/?feedView=all" class="linkedin"><i class="bi bi-linkedin"></i></a>
-          </div>
-        </div>
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Enlaces</h4>
-          <ul>
-            <li><a href="./">Inicio</a></li>
-            <li><a href="nosotros/">Nosotros</a></li>
-            <li><a href="publicaciones/">Publicaciones</a></li>
-            <li><a href="noticias/">#Noticias</a></li>
-            <li><a href="eventos/">Eventos</a></li>
-          </ul>
-        </div>
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Nobis illum</h4>
-          <ul>
-            <li><a href="#">Ipsam</a></li>
-            <li><a href="#">Laudantium dolorum</a></li>
-            <li><a href="#">Dinera</a></li>
-            <li><a href="#">Trodelas</a></li>
-            <li><a href="#">Flexo</a></li>
-          </ul>
-        </div>
-
-      </div>
-    </div>
-
-    <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">ZenBlog</strong> <span>All Rights Reserved</span></p>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div>
-
-  </footer>
+  <!-- Footer -->
+  <div id="footer-container"></div>
+  <script src="/cechpucp/assets/js/footer.js"></script>
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
