--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <div id="header-container"></div>
   <script src="assets/js/header.js"></script>
   <!-- Fin Header -->
-   
+
   <main class="main">
 
     <!-- Slider Section -->
@@ -414,7 +414,7 @@
 
   <!-- Footer -->
   <div id="footer-container"></div>
-  <script src="/cechpucp/assets/js/footer.js"></script>
+  <script src="assets/js/footer.js"></script>
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
