--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<noscript>Tu navegador no soporta JavaScript o está deshabilitado.</noscript>
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -434,3 +436,6 @@
 </body>
 
 </html>
+<script>
+  console.log("Fin de body alcanzado.");
+</script>
