--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<noscript>Tu navegador no soporta JavaScript o está deshabilitado.</noscript>
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -39,10 +37,54 @@
 
 <body class="index-page">
 
-  <!-- Inicio Header -->
-  <div id="header-container"></div>
-  <script src="assets/js/header.js"></script>
-  <!-- Fin Header -->
+  <header id="header" class="header d-flex align-items-center sticky-top">
+    <div class="container position-relative d-flex align-items-center justify-content-between">
+
+      <a href="./" class="logo d-flex align-items-center me-auto me-xl-0">
+        <!-- Uncomment the line below if you also wish to use an image logo -->
+        <!-- <img src="assets/img/logo.png" alt=""> -->
+        <h1 class="sitename">Círculo de Estudios Chinos</h1>
+      </a>
+
+      <nav id="navmenu" class="navmenu">
+        <ul>
+          <!--<li><a href="index.html" class="active">Home</a></li>-->
+          <li class="dropdown"><a href="nosotros/"><span>Nosotros</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="nosotros/">CECH</a></li>
+              <li><a href="nosotros/derecho/">Sección Derecho</a></li>
+              <li><a href="nosotros/economia/">Sección Economía</a></li>
+              <li><a href="nosotros/literatura/">Sección Literatura</a></li>
+            </ul>
+          </li>
+          <li class="dropdown"><a href="publicaciones/"><span>Publicaciones</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="publicaciones/articulos/">Artículos académicos</a></li>
+              <li><a href="publicaciones/ensayos/">Ensayos</a></li>
+              <li><a href="publicaciones/reseñas/">Reseñas</a></li>
+              <li><a href="publicaciones/boletines/">Boletines</a></li>
+            </ul>
+          <li><a href="noticias/">#Noticias</a></li>
+          <li><a href="eventos/">Eventos</a></li>
+          <li><a href="contacto/">Contacto</a></li>
+        </ul>
+        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+      </nav>
+
+      <!-- Logo entre contacto y redes sociales -->
+       <div class="logo-mini d-none d-lg-block">
+        <img src="assets/img/confucio-logo.png" alt="Logo InstConfucio" style="height: 40px; margin-left: 15px;">
+      </div>
+
+      <div class="header-social-links">
+        <!--<a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a></a>-->
+        <a href="https://www.facebook.com/cechpucp" class="facebook"><i class="bi bi-facebook"></i>
+        <a href="https://www.instagram.com/cechpucp/" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/company/c%C3%ADrculo-de-estudios-chinos-secci%C3%B3n-derecho/posts/?feedView=all" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      </div>
+
+    </div>
+  </header>
 
   <main class="main">
 
@@ -414,9 +456,68 @@
 
   </main>
 
-  <!-- Footer -->
-  <div id="footer-container"></div>
-  <script src="assets/js/footer.js"></script>
+  <footer id="footer" class="footer dark-background">
+
+    <div class="container footer-top">
+      <div class="row gy-4">
+        <div class="col-lg-4 col-md-6 footer-about">
+          <a href="./" class="logo d-flex align-items-center">
+            <span class="sitename">Círculo de Estudios Chinos</span>
+          </a>
+          <div class="footer-contact pt-3">
+            <p>Av. Universitaria Nº 890, San Miguel</p>
+            <p>Lima, Perú</p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+51 5589 55488 55</span></p>
+            <p><strong>Email:</strong><br>
+            <span>cech-derecho@pucp.edu.pe</span><br>
+            <span>cech-economia@pucp.edu.pe</span>
+          </p>
+          </div>
+          <div class="social-links d-flex mt-4">
+            <!--<a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a></a>-->
+            <a href="https://www.facebook.com/cechpucp" class="facebook"><i class="bi bi-facebook"></i>
+            <a href="https://www.instagram.com/cechpucp/" class="instagram"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.linkedin.com/company/c%C3%ADrculo-de-estudios-chinos-secci%C3%B3n-derecho/posts/?feedView=all" class="linkedin"><i class="bi bi-linkedin"></i></a>
+          </div>
+        </div>
+
+        <div class="col-lg-2 col-md-3 footer-links">
+          <h4>Enlaces</h4>
+          <ul>
+            <li><a href="./">Inicio</a></li>
+            <li><a href="nosotros/">Nosotros</a></li>
+            <li><a href="publicaciones/">Publicaciones</a></li>
+            <li><a href="noticias/">#Noticias</a></li>
+            <li><a href="eventos/">Eventos</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-2 col-md-3 footer-links">
+          <h4>Nobis illum</h4>
+          <ul>
+            <li><a href="#">Ipsam</a></li>
+            <li><a href="#">Laudantium dolorum</a></li>
+            <li><a href="#">Dinera</a></li>
+            <li><a href="#">Trodelas</a></li>
+            <li><a href="#">Flexo</a></li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="container copyright text-center mt-4">
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">ZenBlog</strong> <span>All Rights Reserved</span></p>
+      <div class="credits">
+        <!-- All the links in the footer should remain intact. -->
+        <!-- You can delete the links only if you've purchased the pro version. -->
+        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
+        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+      </div>
+    </div>
+
+  </footer>
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
@@ -436,6 +537,3 @@
 </body>
 
 </html>
-<script>
-  console.log("Fin de body alcanzado.");
-</script>
