update index main

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>CECH-PUCP</title>
-  <meta name="description" content="">
+  <meta name="description" content="El Círculo de Estudios Chinos de la PUCP en colaboración con el Instituto Confucio promueve el estudio académico multidisciplinario sobre China. Publicaciones, eventos y convocatorias.">
   <meta name="keywords" content="">
 
   <!-- Favicons -->
@@ -477,7 +477,7 @@
           </div>
           <div class="social-links d-flex mt-4">
             <!--<a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a></a>-->
-            <a href="https://www.facebook.com/cechpucp" class="facebook"><i class="bi bi-facebook"></i>
+            <a href="https://www.facebook.com/cechpucp" class="facebook"><i class="bi bi-facebook"></i></a>
             <a href="https://www.instagram.com/cechpucp/" class="instagram"><i class="bi bi-instagram"></i></a>
             <a href="https://www.linkedin.com/company/c%C3%ADrculo-de-estudios-chinos-secci%C3%B3n-derecho/posts/?feedView=all" class="linkedin"><i class="bi bi-linkedin"></i></a>
           </div>
