--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>CECH-PUCP</title>
   <meta name="description" content="El Círculo de Estudios Chinos de la PUCP en colaboración con el Instituto Confucio promueve el estudio académico multidisciplinario sobre China. Publicaciones, eventos y convocatorias.">
-  <meta name="keywords" content="">
+  <meta name="keywords" content="CECH-PUCP">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
