--- a/publicaciones/articulos/Impacto-de-X-sobre-y/index.html
+++ b/publicaciones/articulos/Impacto-de-X-sobre-y/index.html
@@ -156,7 +156,7 @@
                     Consectetur quasi id et optio praesentium aut asperiores eaque aut. Explicabo omnis quibusdam esse. Ex libero illum iusto totam et ut aut blanditiis. Veritatis numquam ut illum ut a quam vitae.
                   </p>
                   <p>
-                    Alias quia non aliquid. Eos et ea velit. Voluptatem maxime enim omnis ipsa voluptas incidunt. Nulla sit eaque mollitia nisi asperiores est veniam.
+                    Alias quia non aliquid. Prueba. Voluptatem maxime enim omnis ipsa voluptas incidunt. Nulla sit eaque mollitia nisi asperiores est veniam.
                   </p>
 
                 </div><!-- End post content -->
@@ -202,7 +202,6 @@
               <h3 class="widget-title">#Lo Último</h3>
             </div>
             
-            <!-- Al final del body (antes de cerrar </body>) -->
             <script src="../../../assets/js/lo-ultimo.js"></script>
             <script>
               renderRecentPosts("recent-posts-widget");
